--- a/package.json
+++ b/package.json
@@ -11,6 +11,19 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@livepeer/react": "^3.1.7",
+		"@mysten/sui": "^1.16.0",
+		"@suiet/wallet-kit": "^0.3.3",
+		"@supabase/supabase-js": "^2.39.1",
+		"antd": "^5.12.5",
+		"aptos": "^1.21.0",
+		"chart.js": "^4.4.1",
+		"framer-motion": "^11.12.0",
+		"jotai": "^2.6.0",
+		"next": "13.1.2",
+		"next-video": "^0.11.1",
+		"react-chartjs-2": "^5.2.0",
+		"react-modal": "^3.16.1",
     "@hookform/resolvers": "^3.9.1",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@mediapipe/camera_utils": "^0.3.1640029074",
@@ -74,6 +87,10 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+		"daisyui": "^3.1.5",
+		"eslint": "8.36.0",
+		"eslint-config-next": "13.2.4",
+		"react-icons": "^4.10.1",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/express": "4.17.21",
